--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Jan Brodda - Softwareentwickler und freiberuflicher IT-Spezialist</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Softwareentwickler, IT-Spezialist, Beratung, Dortmund, Hamm, Soest" name="keywords">
+        <meta content="Meine Kompetenz-Themen erstrecken sich von der klassischen Softwareentwicklung über die Konzeption und Systemverwaltung bis zu Anwender-Schulungen und Vorträgen." name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
