disable phone number detection

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Jan Brodda - Softwareentwickler und freiberuflicher IT-Spezialist</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta name="format-detection" content="telephone=no">
         <meta content="Softwareentwickler, IT-Spezialist, Beratung, Dortmund, Hamm, Soest" name="keywords">
         <meta content="Meine Kompetenz-Themen erstrecken sich von der klassischen Softwareentwicklung über die Konzeption und Systemverwaltung bis zu Anwender-Schulungen und Vorträgen." name="description">
 
