--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h1 class="text-primary mt-2">Jan Brodda</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
-                            <div class="typed-text d-none">Software Developer, Customer Service Specialist, Freelance System Engineer</div>
+                            <div class="typed-text d-none">Software Developer, Customer Service Specialist, Freelance System Engineer, Freelance IT Consultant</div>
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.xing.com/profile/Jan_Brodda"><i class="fab fa-xing"></i></a>
