--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Java Web Entwickler / Teamleitung Second Level Support</h5>
                                 <p class="mb-2">ALSO International Services GmbH | <small>seit 10/2020</small></p>
-                                <p>Entwicklung und Konzeption des Kernproduktes - B2C-Webshop auf Java-Basis + Spring Framework Basis.
-                                Nach einiger Zeit gewechselt in die Teamleitung des internationalen 2nd Level Supports mit zusätzlicher Fokus-Stelle in der Beratung der Entwickler bei Architektur- und Daten-Themen.</p>
+                                <p>Entwicklung und Konzeption des Kernproduktes - B2B-Webshop auf Java-Basis + Spring Framework Basis.
+                                Anfang '23 gewechselt in die Teamleitung des internationalen 2nd Level Supports mit zusätzlicher Fokus-Stelle in der Beratung der Entwickler bei Architektur- und Daten-Themen.</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
